// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pg_lsn.sql > line 8 1`] = `
[
  "INSERT INTO PG_LSN_TBL VALUES ('0/0')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "pg_lsn_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "0/0",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 19 1`] = `
[
  "SELECT pg_input_is_valid('16AE7F7', 'pg_lsn')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "16AE7F7",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "pg_lsn",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 23 1`] = `
[
  "SELECT MIN(f1), MAX(f1) FROM PG_LSN_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 29,
                  "relname": "pg_lsn_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 11,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "min",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 20,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "max",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 25 1`] = `
[
  "DROP TABLE PG_LSN_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "pg_lsn_tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 28 1`] = `
[
  "SELECT '0/16AE7F8' = '0/16AE7F8'::pg_lsn",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "0/16AE7F8",
                          },
                        },
                      },
                      "location": 19,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 21,
                              "sval": {
                                "sval": "0/16AE7F8",
                              },
                            },
                          },
                          "location": 32,
                          "typeName": {
                            "location": 34,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_lsn",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 38 1`] = `
[
  " -- out of range error
SELECT '0/1'::pg_lsn - 1::numeric",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 30,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 30,
                              "sval": {
                                "sval": "0/1",
                              },
                            },
                          },
                          "location": 35,
                          "typeName": {
                            "location": 37,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_lsn",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 44,
                      "name": [
                        {
                          "String": {
                            "sval": "-",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 46,
                            },
                          },
                          "location": 47,
                          "typeName": {
                            "location": 49,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "numeric",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 40 1`] = `
[
  " -- out of range error
SELECT '0/0'::pg_lsn + ('FFFFFFFF/FFFFFFFF'::pg_lsn - '0/0'::pg_lsn)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 30,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 30,
                              "sval": {
                                "sval": "0/0",
                              },
                            },
                          },
                          "location": 35,
                          "typeName": {
                            "location": 37,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_lsn",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 44,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 47,
                                  "sval": {
                                    "sval": "FFFFFFFF/FFFFFFFF",
                                  },
                                },
                              },
                              "location": 66,
                              "typeName": {
                                "location": 68,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "pg_lsn",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                          "location": 75,
                          "name": [
                            {
                              "String": {
                                "sval": "-",
                              },
                            },
                          ],
                          "rexpr": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 77,
                                  "sval": {
                                    "sval": "0/0",
                                  },
                                },
                              },
                              "location": 82,
                              "typeName": {
                                "location": 84,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "pg_lsn",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 47 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT (i || '/' || j)::pg_lsn f
  FROM generate_series(1, 10) i,
       generate_series(1, 10) j,
       generate_series(1, 5) k
  WHERE i <= 10 AND j > 0 AND j <= 10
  ORDER BY f",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "i",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 85,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 88,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 69,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "j",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 118,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 121,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 102,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "k",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 151,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 5,
                                        },
                                        "location": 154,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 135,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f",
                              },
                            },
                          ],
                          "location": 208,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "name": "f",
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "i",
                                          },
                                        },
                                      ],
                                      "location": 37,
                                    },
                                  },
                                  "location": 39,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "||",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "A_Const": {
                                      "location": 42,
                                      "sval": {
                                        "sval": "/",
                                      },
                                    },
                                  },
                                },
                              },
                              "location": 46,
                              "name": [
                                {
                                  "String": {
                                    "sval": "||",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "j",
                                      },
                                    },
                                  ],
                                  "location": 49,
                                },
                              },
                            },
                          },
                          "location": 51,
                          "typeName": {
                            "location": 53,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_lsn",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "i",
                                  },
                                },
                              ],
                              "location": 167,
                            },
                          },
                          "location": 169,
                          "name": [
                            {
                              "String": {
                                "sval": "<=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 10,
                              },
                              "location": 172,
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "j",
                                  },
                                },
                              ],
                              "location": 179,
                            },
                          },
                          "location": 181,
                          "name": [
                            {
                              "String": {
                                "sval": ">",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 183,
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "j",
                                  },
                                },
                              ],
                              "location": 189,
                            },
                          },
                          "location": 191,
                          "name": [
                            {
                              "String": {
                                "sval": "<=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 10,
                              },
                              "location": 194,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 175,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`pg_lsn.sql > line 55 1`] = `
[
  "SELECT DISTINCT (i || '/' || j)::pg_lsn f
  FROM generate_series(1, 10) i,
       generate_series(1, 10) j,
       generate_series(1, 5) k
  WHERE i <= 10 AND j > 0 AND j <= 10
  ORDER BY f",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 65,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 68,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 49,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "j",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 98,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 10,
                                    },
                                    "location": 101,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 82,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "k",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 131,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 5,
                                    },
                                    "location": 134,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 115,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f",
                          },
                        },
                      ],
                      "location": 188,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "name": "f",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "i",
                                      },
                                    },
                                  ],
                                  "location": 17,
                                },
                              },
                              "location": 19,
                              "name": [
                                {
                                  "String": {
                                    "sval": "||",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "location": 22,
                                  "sval": {
                                    "sval": "/",
                                  },
                                },
                              },
                            },
                          },
                          "location": 26,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "j",
                                  },
                                },
                              ],
                              "location": 29,
                            },
                          },
                        },
                      },
                      "location": 31,
                      "typeName": {
                        "location": 33,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_lsn",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 147,
                        },
                      },
                      "location": 149,
                      "name": [
                        {
                          "String": {
                            "sval": "<=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 152,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 159,
                        },
                      },
                      "location": 161,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 163,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 169,
                        },
                      },
                      "location": 171,
                      "name": [
                        {
                          "String": {
                            "sval": "<=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 174,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 155,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
